# civic-lib-geo

./: .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPER.md  README.md  REF_API.md  REF_DEV.md  SECURITY.md  _ci_build_api.py  _ci_bump_version.py  _ci_release.ps1  bump_version.py  gen_test_data.py  mkdocs.yml  pyproject.toml  pytest.ini  release.ps1  requirements-dev.txt  requirements.txt  setup.cfg  versions.json
.github/workflows/: ci.yml  deploy-docs.yml  lib.yml  release.yml  tests.yml  validate-ptag.yml
0.2.5/: 404.html  index.html  sitemap.xml
0.2.5/DEVELOPER/: index.html
0.2.5/api/: index.html
0.2.5/api/civic_lib_geo.cli.check_size/: index.html
0.2.5/api/civic_lib_geo.cli.chunk_geojson/: index.html
0.2.5/api/civic_lib_geo.cli.cli/: index.html
0.2.5/api/civic_lib_geo.cli.read_props/: index.html
0.2.5/api/civic_lib_geo.cli.shapefile_to_geojson/: index.html
0.2.5/api/civic_lib_geo.cli.simplify_geojson/: index.html
0.2.5/api/civic_lib_geo.cli.topojson_to_geojson/: index.html
0.2.5/api/civic_lib_geo.fips_utils/: index.html
0.2.5/api/civic_lib_geo.geojson_utils/: index.html
0.2.5/api/civic_lib_geo.shapefile_utils/: index.html
0.2.5/api/civic_lib_geo.topojson_utils/: index.html
0.2.5/api/civic_lib_geo.us_constants/: index.html
0.2.5/cli/: index.html
0.2.7/: 404.html  index.html  sitemap.xml
0.2.7/DEVELOPER/: index.html
0.2.7/api/: API.yaml  index.html
0.2.7/api/civic_lib_geo.cli.check_size/: index.html
0.2.7/api/civic_lib_geo.cli.chunk_geojson/: index.html
0.2.7/api/civic_lib_geo.cli.cli/: index.html
0.2.7/api/civic_lib_geo.cli.read_props/: index.html
0.2.7/api/civic_lib_geo.cli.shapefile_to_geojson/: index.html
0.2.7/api/civic_lib_geo.cli.simplify_geojson/: index.html
0.2.7/api/civic_lib_geo.cli.topojson_to_geojson/: index.html
0.2.7/api/civic_lib_geo.fips_utils/: index.html
0.2.7/api/civic_lib_geo.geojson_utils/: index.html
0.2.7/api/civic_lib_geo.shapefile_utils/: index.html
0.2.7/api/civic_lib_geo.topojson_utils/: index.html
0.2.7/api/civic_lib_geo.us_constants/: index.html
0.2.7/cli/: index.html
0.2.7/search/: search_index.json
0.2.9/: 404.html  index.html  sitemap.xml
0.2.9/api/: index.html
0.2.9/search/: search_index.json
0.3.0/api/: index.html
0.3.0/search/: search_index.json
0.4.0/: 404.html  index.html  objects.inv  sitemap.xml
0.4.0/api/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/DEVELOPER/: index.html
dev/api/: index.html
dev/api/civic_lib_geo.cli.check_size/: index.html
dev/api/civic_lib_geo.cli.chunk_geojson/: index.html
dev/api/civic_lib_geo.cli.cli/: index.html
dev/api/civic_lib_geo.cli.read_props/: index.html
dev/api/civic_lib_geo.cli.shapefile_to_geojson/: index.html
dev/cli/: index.html
dev/search/: search_index.json
docs/: DEVELOPER.md  api.md  cli.md
docs/api/: API.yaml  api_utils.md  civic_lib_geo.cli.check_size.md  civic_lib_geo.cli.chunk_geojson.md  civic_lib_geo.cli.cli.md  civic_lib_geo.cli.read_props.md  civic_lib_geo.cli.shapefile_to_geojson.md  civic_lib_geo.cli.simplify_geojson.md  civic_lib_geo.cli.topojson_to_geojson.md  civic_lib_geo.fips_utils.md  civic_lib_geo.geojson_utils.md  civic_lib_geo.shapefile_utils.md  civic_lib_geo.topojson_utils.md  civic_lib_geo.us_constants.md  config_utils.md  date_utils.md  dev_utils.md  doc_utils.md  error_utils.md  file_utils.md  log_utils.md  path_utils.md  query_utils.md  report_archiver.md  report_constants.md  report_formatter.md  report_indexer.md  report_reader.md  report_summary.md  report_utils.md  report_writer.md  schema_utils.md  version_utils.md  yaml_utils.md
provenance/: ptag.json
src/civic_lib_geo/: __main__.py  _version.py  constants.py  fips_utils.py  geojson_utils.py  shapefile_utils.py  topojson_utils.py  us_constants.py
src/civic_lib_gis/: fips_utils.py  geojson_utils.py  shapefile_utils.py
tests/: test_cli_chunk_geojson.py  test_constants.py  test_fips_utils.py  test_geojson_utils.py  test_shapefile_utils.py
tests/data/: test.geojson  test_shapefile.dbf  test_shapefile.shp  test_shapefile.shx
(+14 files in other folders)
